Fix editor spacing

--- a/src/common/pages/_submit.scss
+++ b/src/common/pages/_submit.scss
@@ -49,6 +49,9 @@
       padding-left: 10px;
       display: flex;
       align-items: center;
+      @media (max-width: $sm-break) {
+        height: 64px;
+      }
     }
 
     .title-input,
